# finite

./: finite.cabal
src/Data/: Finite.hs
